z-index solve to mobile

--- a/styles.css
+++ b/styles.css
@@ -56,12 +56,14 @@ html, body {
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
+
+    z-index: 2;
 }
 
 .profile-picture {
     width: calc(100% - 40px);
     position: absolute;
-    z-index: -1;
+    z-index: 1;
 }
 
 h1 {
